--- a/weatherstyle.css
+++ b/weatherstyle.css
@@ -17,16 +17,17 @@ body{
 .name{
     width: 360px;
     text-align: center;
-    padding-top: 5px;
+    padding-top:10px;
     padding-bottom: 15px;
     color: rgb(0, 0, 0);
     font-family: 'Roboto', sans-serif;
+    font-size: 0.7cm;
 }
 .container{
-    width: 360px;
+    width: 400px;
     height: 100px;
     padding: 15px;
-    margin-left: 50px;
+    margin-left: 100px;
     border-radius: 12px;
     box-shadow: 0 20px 50px rgba(0, 0, 0, 0);
     flex-direction: row;
@@ -51,10 +52,10 @@ body{
     border: none;
     font-size: 20px;
     cursor: pointer;
-    height: 65px;
+    height: 50px;
     color: rgb(0, 0, 0);
-    width: 65px;
-    background: transparent;
+    width: 100px;
+    background: rgba(245, 239, 239, 0);
     border-radius: 12px;
     margin-top: 15px;
     padding-left: 3px;
@@ -76,15 +77,15 @@ body{
     padding: 8px;
     font-size: 20px;
     outline: none;
-    margin-left: 90px;
+    margin-left: 45px;
     height: 50px;
     color: rgb(0, 0, 0);
     background: transparent;
     border: 2px solid rgba(0, 0, 0, 0);
     border-radius: 10px;
-    font-size: xx-large;
+    font-size: 1.5cm;
 }
 
 .container input[type="button"]:hover{
-    background: rgba(255, 255, 255, 0.1);
+    background: rgba(255, 143, 51, 0.5);
 }
